--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.10.0",
     "discord.js": "^14.21.0",
     "dotenv": "^17.0.1",
+    "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.1",
     "node-cron": "^4.2.1",
